tests/NormalTests/paczka1/fuzzy1/38612046.err
Error in line 16: q4kreup4g S350 55,1
Error in line 19: frrgz9 S313 63,2
